# SegCaps-for-LymphNode-Detection

./: .gitignore  README.md  UNet_Research.ipynb  UNet_Segmentation.ipynb  automate_annotations.py  data_aug.py  data_aug_visualize.ipynb  main.py  pyproject.toml  test.ipynb
