[project]
name = "tensorflow-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticdeform>=0.5.1",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.10",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "tensorflow[and-cuda]>=2.19.0",
]
